removed extra margins

--- a/web/index.html
+++ b/web/index.html
@@ -139,22 +139,14 @@
       font-size: 10px;
     }
     #vis {
-      margin-left: 10px;
+      margin-left: 0px auto;
+      
     }
     </style>
 
 </head>
 
 <body>
-  <div id="controls">
-    <!--
-    <label>Show all user trends</label><input class="showallusers" type="checkbox"></input>
-    or,
-    <label>Select user: </label><select></select>
-    
-    <label>Show individual tweets</label><input class="showtweets" type="checkbox" checked></input>
-    -->
-  </div>
 
   <div class="callout">
     <img src=""><span class="userhandle"></span>
