fix for mouseover

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       position: absolute;
       font-size: 14px; 
       margin-left: 70px;
+      height: 0;
     }
     .legend {
       margin: 3px 5px;
@@ -139,7 +140,7 @@
       font-size: 10px;
     }
     #vis {
-      margin-left: 0px auto;
+      margin: 0px auto;
       
     }
     </style>
