--- a/web/index.html
+++ b/web/index.html
@@ -32,10 +32,11 @@
       background: rgba(255, 255, 255, 0.85);
       pointer-events: none;
       opacity: 0;
-      transition: all 0.3s ease-in;
+      transition: all 0.1s ease-in;
       border: 1px solid rgba(220, 220, 220, 0.3);
       border-radius: 6px;
       text-shadow: 0px 0px 5px rgba(255, 255, 255, 1);
+      z-index: 2;
     }
     .callout img {
       padding: 2px;
@@ -115,6 +116,7 @@
       position: absolute;
       font-size: 14px; 
       margin-left: 70px;
+      height: 0;
     }
     .legend {
       margin: 3px 5px;
@@ -129,8 +131,8 @@
       margin: -2px 5px;
       border: 2px solid;
       float: left;
-      font-size: 20px;
-      line-height: 17px;
+      font-size: 18px;
+      line-height: 14px;
     }
     .credit {
       position: fixed;
@@ -139,7 +141,7 @@
       font-size: 10px;
     }
     #vis {
-      margin-left: 0px auto;
+      margin: 0px auto;
       
     }
     </style>
